--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="assets/BUDGETLY-removebg-preview.png" width="50px" class="logo">
           <img id="menu" src="assets/menu.svg" class="menu-logo" onclick="togglemenu()">
           <ul id="ul">
-            <li><a href="https://nixonxc.github.io/Budgetly">HOME</a></li>
+            <li><a href="https://budgetly-web.github.io/">HOME</a></li>
             <li><a href="pages/todo.html">ToDo List</a></li>
             <li><a href="pages/logs.html">PURCHASES</a></li>
             <li id="hide1"><a>|</a></li>
@@ -26,8 +26,8 @@
           </ul> 
         </div>
         <ul id="menu-ul">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="#">SAVINGS</a></li>
+          <li><a href="https://budgetly-web.github.io/">HOME</a></li>
+          <li><a href="pages/todo.html">ToDo List</a></li>
           <li><a href="pages/logs.html">PURCHASES</a></li>
         </ul>
       </nav>
