--- a/pages/logs.html
+++ b/pages/logs.html
@@ -17,7 +17,7 @@
           <img src="assets/BUDGETLY-removebg-preview.png" width="50px" class="logo">
           <img id="menu" src="assets/menu.svg" class="menu-logo">
           <ul id="ul">
-            <li><a href="https://nixonxc.github.io/Budgetly">HOME</a></li>
+            <li><a href="https://budgetly-web.github.io/">HOME</a></li>
             <li><a href="todo.html">ToDo List</a></li>
             <li><a href="logs.html">PURCHASES</a></li>
             <li id="hide1"><a>|</a></li>
@@ -25,9 +25,9 @@
             <img id="hide3" src="assets/clv.png" width="40px" class="icon">
           </ul> 
         </div>
-        <ul id="menu-ul" style="display: none;">
-          <li><a href="https://nixonxc.github.io/Budgetly">HOME</a></li>
-          <li><a href="#">SAVINGS</a></li>
+        <ul id="menu-ul">
+          <li><a href="https://budgetly-web.github.io/">HOME</a></li>
+          <li><a href="todo.html">ToDo List</a></li>
           <li><a href="logs.html">PURCHASES</a></li>
         </ul>
       </nav>
